add classes in footer and order it

--- a/src/index.html
+++ b/src/index.html
@@ -32,21 +32,25 @@
         <a href="#" class="book-appointment">Agenda tu cita</a>
       </article>
 
-      <footer>
-        <section>
-          <h3>Nuestra ubicación</h3>
-          <p>Colombia, Valle del Cauca, Yumbo</p>
-        </section>
-        <section>
-          <h3>Teléfonos</h3>
-          <p>+57 312 8644362</p>
-          <p>+57 322 5821796</p>
-        </section>
-        <section>
-          <h3>Email</h3>
-          <p>servicios@diservi.com</p>
-        </section>
-      </footer>
+      <div class="footer-wrapper">
+        <footer>
+          <section class="footer-widget">
+            <h3>Nuestra ubicación</h3>
+            <p>Colombia, Valle del Cauca, Yumbo</p>
+          </section>
+          <section class="footer-widget">
+            <h3>Teléfonos</h3>
+            <div class="footer-widget__phones">
+              <p>+57 312 8644362</p>
+              <p>+57 322 5821796</p>
+            </div>
+          </section>
+          <section class="footer-widget">
+            <h3>Email</h3>
+            <p>servicios@diservi.com</p>
+          </section>
+        </footer>
+      </div>
     </main>
   </body>
 </html>
