add services div with unorder list and its clases ...pending continue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <header>
         <a href="#" class="logo"
-          ><img src="../multimedia/logo.png" alt="logo diservi"
+          ><img src="./multimedia/logo.png" alt="logo diservi"
         /></a>
         <nav class="menu">
           <ul class="menu-list">
@@ -39,6 +39,17 @@
           <h1 class="claim">DISEÑOS Y SERVICIOS INDUSTRIALES</h1>
           <h2 class="subclaim">Tu empresa nos necesita...</h2>
           <a href="#" class="book-appointment">Agenda tu cita</a>
+          <div class="services">
+            <h3 class="subclaim">Pintura</h3>
+            <ul class="services-painting">
+              <li class="services-painting__item"></li>
+            </ul>
+            <!-- <img
+              src="./multimedia/painting/pexels-digital-buggu-191648.jpg"
+              alt="service painting 1"
+              height="50px"
+            /> -->
+          </div>
         </section>
         <section id="page-about">
           <h1 class="claim">¿Quiénes somos?</h1>
