add fontawesome and styles for arrows in services

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/41492ee37e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>diservi</title>
   </head>
   <body>
@@ -40,15 +44,19 @@
           <h2 class="subclaim">Tu empresa nos necesita...</h2>
           <a href="#" class="book-appointment">Agenda tu cita</a>
           <div class="services">
-            <h3 class="subclaim">Pintura</h3>
+            <div class="services-titles__group">
+              <h2 class="services-title">Servicios</h2>
+              <h3 class="services-subtitle">Pintura</h3>
+            </div>
             <ul class="services-painting">
+              <a class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
+              <a class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
               <li class="services-painting__item"></li>
             </ul>
-            <!-- <img
-              src="./multimedia/painting/pexels-digital-buggu-191648.jpg"
-              alt="service painting 1"
-              height="50px"
-            /> -->
           </div>
         </section>
         <section id="page-about">
