--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="src/css/main.css" />
     <script
       src="https://kit.fontawesome.com/41492ee37e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="src/js/main.js"></script>
     <title>diservi</title>
   </head>
   <body>
     <main>
       <header>
         <a href="#" class="logo"
-          ><img src="./multimedia/logo.png" alt="logo diservi"
+          ><img src="multimedia/logo.png" alt="logo diservi"
         /></a>
         <nav class="menu">
           <ul class="menu-list">
