solve error with defer on script link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/41492ee37e.js"
       crossorigin="anonymous"
     ></script>
-    <script src="src/js/main.js"></script>
+    <script src="src/js/main.js" defer></script>
     <title>diservi</title>
   </head>
   <body>
