change to uppercase and add letters in icons to solve temporary problem with internet connection

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
           <a href="#" class="book-appointment">Agenda tu cita</a>
           <div class="services">
             <div class="services-titles__group">
-              <h2 class="services-title">Servicios</h2>
-              <h3 class="services-subtitle">Pintura</h3>
+              <h2 class="services-title">SERVICIOS</h2>
+              <h3 class="services-subtitle">PINTURA</h3>
             </div>
             <ul class="services-painting">
               <a class="slideButton nextSlide"
-                ><i class="fa-solid fa-chevron-right"></i
-              ></a>
+                ><i class="fa-solid fa-chevron-right">P</i></a
+              >
               <a class="slideButton prevSlide"
-                ><i class="fa-solid fa-chevron-left"></i
-              ></a>
+                ><i class="fa-solid fa-chevron-left">N</i></a
+              >
               <li class="services-painting__item"></li>
             </ul>
           </div>
