trying to add categories menu in services ...pending continue

--- a/index.html
+++ b/index.html
@@ -45,18 +45,22 @@
           <h2 class="subclaim">Tu empresa nos necesita...</h2>
           <a href="#" class="book-appointment">Agenda tu cita</a>
           <div class="services">
-            <div class="services-titles__group">
-              <h2 class="services-title">SERVICIOS</h2>
-              <h3 class="services-subtitle">PINTURA</h3>
-            </div>
-            <ul class="services-painting">
-              <a class="slideButton nextSlide"
-                ><i class="fa-solid fa-chevron-right">P</i></a
-              >
-              <a class="slideButton prevSlide"
-                ><i class="fa-solid fa-chevron-left">N</i></a
-              >
-              <li class="services-painting__item"></li>
+            <h2 class="services-title">SERVICIOS</h2>
+            <a class="slideButton nextSlide"
+              ><i class="fa-solid fa-chevron-right">P</i></a
+            >
+            <a class="slideButton prevSlide"
+              ><i class="fa-solid fa-chevron-left">N</i></a
+            >
+            <ul class="services-categories">
+              <li class="services-painting__item">
+                <h3 class="services-subtitle">PINTURA</h3>
+                <!-- <div class="services-painting__item"></div> -->
+              </li>
+              <li class="services-design">
+                <h3 class="services-subtitle">DISEÑO</h3>
+                <!-- <div class="services-design__item"></div> -->
+              </li>
             </ul>
           </div>
         </section>
