--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="module" src="src/js/helpers.js" defer></script>
     <script type="module" src="src/js/constants.js" defer></script>
     <script type="module" src="src/js/paintingValues.js" defer></script>
+    <script type="module" src="src/js/solderingValues.js" defer></script>
     <title>diservi</title>
   </head>
   <body>
@@ -70,6 +71,17 @@
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
               <div class="services-soldering__item"></div>
+            </li>
+
+            <li class="services-design-a">
+              <h3 class="services-subtitle">DISEÑO DE ESTRUCTURAS</h3>
+              <a id="next-slide-design-a" class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
+              <a id="prev-slide-design-a" class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
+              <div class="services-design-a__item"></div>
             </li>
           </ul>
         </section>
