add desing-b in services block

--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
               ></a>
               <div class="services-design-a__item"></div>
             </li>
+
+            <li class="services-design-b">
+              <h3 class="services-subtitle">DISEÑO DE PIEZAS MECÁNICAS</h3>
+              <a id="next-slide-design-b" class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i>N</a
+              >
+              <a id="prev-slide-design-b" class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i>P</a
+              >
+              <div class="services-design-b__item"></div>
+            </li>
           </ul>
         </section>
         <section id="page-about">
