add desing-c in services block

--- a/index.html
+++ b/index.html
@@ -87,12 +87,23 @@
             <li class="services-design-b">
               <h3 class="services-subtitle">DISEÑO DE PIEZAS MECÁNICAS</h3>
               <a id="next-slide-design-b" class="slideButton nextSlide"
-                ><i class="fa-solid fa-chevron-right"></i>N</a
-              >
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
               <a id="prev-slide-design-b" class="slideButton prevSlide"
-                ><i class="fa-solid fa-chevron-left"></i>P</a
-              >
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
               <div class="services-design-b__item"></div>
+            </li>
+
+            <li class="services-design-c">
+              <h3 class="services-subtitle">DISEÑO DE PLANOS PARA PROYECTOS</h3>
+              <a id="next-slide-design-c" class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
+              <a id="prev-slide-design-c" class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
+              <div class="services-design-c__item"></div>
             </li>
           </ul>
         </section>
