--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
               ></a>
               <div class="services-design-c__item"></div>
             </li>
+
+            <li class="services-design-d">
+              <h3 class="services-subtitle">DISEÑO DE P&ID</h3>
+              <a id="next-slide-design-d" class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
+              <a id="prev-slide-design-d" class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
+              <div class="services-design-d__item"></div>
+            </li>
           </ul>
         </section>
         <section id="page-about">
