add waterproofing in block service

--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
               <div class="services-soldering__item"></div>
             </li>
 
+            <li class="services-waterproofing">
+              <h3 class="services-subtitle">IMPERMEABILIZACIÓN</h3>
+              <a id="next-slide-waterproofing" class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
+              <a id="prev-slide-waterproofing" class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
+              <div class="services-waterproofing__item"></div>
+            </li>
+
             <li class="services-design-a">
               <h3 class="services-subtitle">DISEÑO DE ESTRUCTURAS</h3>
               <a id="next-slide-design-a" class="slideButton nextSlide"
