--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
               <div class="services-waterproofing__item"></div>
             </li>
 
+            <li class="services-cleaning">
+              <h3 class="services-subtitle">LIMPIEZA</h3>
+              <a id="next-slide-cleaning" class="slideButton nextSlide"
+                ><i class="fa-solid fa-chevron-right"></i
+              ></a>
+              <a id="prev-slide-cleaning" class="slideButton prevSlide"
+                ><i class="fa-solid fa-chevron-left"></i
+              ></a>
+              <div class="services-cleaning__item"></div>
+            </li>
+
             <li class="services-design-a">
               <h3 class="services-subtitle">DISEÑO DE ESTRUCTURAS</h3>
               <a id="next-slide-design-a" class="slideButton nextSlide"
