add classes to optimize repeated styles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <ul class="services">
             <h2 class="services-title">SERVICIOS</h2>
 
-            <li class="services-painting">
+            <li class="services-all services-painting">
               <h3 class="services-subtitle">PINTURA</h3>
               <a id="next-slide-painting" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -59,10 +59,10 @@
               <a class="slideButton prevSlide" id="prev-slide-painting"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-painting__item"></div>
+              <div class="services-all__item services-painting__item"></div>
             </li>
 
-            <li class="services-soldering">
+            <li class="services-all services-soldering">
               <h3 class="services-subtitle">SOLDADURA</h3>
               <a id="next-slide-soldering" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -70,10 +70,10 @@
               <a id="prev-slide-soldering" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-soldering__item"></div>
+              <div class="services-all__item services-soldering__item"></div>
             </li>
 
-            <li class="services-waterproofing">
+            <li class="services-all services-waterproofing">
               <h3 class="services-subtitle">IMPERMEABILIZACIÓN</h3>
               <a id="next-slide-waterproofing" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -81,10 +81,12 @@
               <a id="prev-slide-waterproofing" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-waterproofing__item"></div>
+              <div
+                class="services-all__item services-waterproofing__item"
+              ></div>
             </li>
 
-            <li class="services-cleaning">
+            <li class="services-all services-cleaning">
               <h3 class="services-subtitle">LIMPIEZA</h3>
               <a id="next-slide-cleaning" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -92,10 +94,10 @@
               <a id="prev-slide-cleaning" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-cleaning__item"></div>
+              <div class="services-all__item services-cleaning__item"></div>
             </li>
 
-            <li class="services-design-a">
+            <li class="services-all services-design-a">
               <h3 class="services-subtitle">DISEÑO DE ESTRUCTURAS</h3>
               <a id="next-slide-design-a" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -103,10 +105,10 @@
               <a id="prev-slide-design-a" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-design-a__item"></div>
+              <div class="services-all__item services-design-a__item"></div>
             </li>
 
-            <li class="services-design-b">
+            <li class="services-all services-design-b">
               <h3 class="services-subtitle">DISEÑO DE PIEZAS MECÁNICAS</h3>
               <a id="next-slide-design-b" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -114,10 +116,10 @@
               <a id="prev-slide-design-b" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-design-b__item"></div>
+              <div class="services-all__item services-design-b__item"></div>
             </li>
 
-            <li class="services-design-c">
+            <li class="services-all services-design-c">
               <h3 class="services-subtitle">DISEÑO DE PLANOS PARA PROYECTOS</h3>
               <a id="next-slide-design-c" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -125,10 +127,10 @@
               <a id="prev-slide-design-c" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-design-c__item"></div>
+              <div class="services-all__item services-design-c__item"></div>
             </li>
 
-            <li class="services-design-d">
+            <li class="services-all services-design-d">
               <h3 class="services-subtitle">DISEÑO DE P&ID</h3>
               <a id="next-slide-design-d" class="slideButton nextSlide"
                 ><i class="fa-solid fa-chevron-right"></i
@@ -136,7 +138,7 @@
               <a id="prev-slide-design-d" class="slideButton prevSlide"
                 ><i class="fa-solid fa-chevron-left"></i
               ></a>
-              <div class="services-design-d__item"></div>
+              <div class="services-all__item services-design-d__item"></div>
             </li>
           </ul>
         </section>
