create div to content title and logo in welcome page

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 
       <article>
         <section id="page-welcome">
-          <h1 class="claim">DISEÑOS Y SERVICIOS INDUSTRIALES</h1>
-          <h2 class="subclaim">Tu empresa nos necesita...</h2>
+          <div class="welcome-header">
+            <img src="./multimedia/logo.png" alt="logo Diservi" width="250px" />
+            <h1 class="claim">Tu empresa nos necesita</h1>
+          </div>
           <ul class="services">
             <h2 class="services-title">SERVICIOS</h2>
 
