add invisible section before about-page to solve error with link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="#">Bienvenido</a>
             </li>
             <li class="menu-list__item">
-              <a href="#page-about">¿Quienes somos?</a>
+              <a href="#page-previous-about">¿Quienes somos?</a>
             </li>
             <li class="menu-list__item">
               <a href="#page-prices">Precios</a>
@@ -140,6 +140,7 @@
             </li>
           </ul>
         </section>
+        <section id="page-previous-about"></section>
         <section id="page-about">
           <h1 class="claim">¿Quiénes somos?</h1>
           <p class="subclaim">
