add claim in header and center the text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="module" src="src/js/constants.js" defer></script>
     <script type="module" src="src/js/paintingValues.js" defer></script>
     <script type="module" src="src/js/solderingValues.js" defer></script>
-    <title>diservi</title>
+    <title>diservi S.A.S</title>
   </head>
   <body>
     <main>
@@ -44,6 +44,7 @@
         <section id="page-welcome">
           <div class="welcome-header">
             <img src="./multimedia/logo.png" alt="logo Diservi" width="250px" />
+            <h1 class="claim">Diseños y Servicios industriales</h1>
             <h1 class="claim">Tu empresa nos necesita</h1>
           </div>
           <ul class="services">
