add informacion about services in about-page ...pending review by client

--- a/index.html
+++ b/index.html
@@ -145,10 +145,53 @@
         <section id="page-about">
           <h1 class="claim">¿Quiénes somos?</h1>
           <p class="subclaim">
-            <strong>Nuestra función es: </strong> Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Debitis facilis vel officia tempore,
-            earum a hic laboriosam, aliquid provident tempora, nihil ipsum rerum
-            animi mollitia? Iure magni reiciendis beatae fugiat.
+            somos un equipo de profesionales con amplio conocimiento en
+            industrias de diversos sectores, lo cual nos permite apoyar tu
+            empresa en:
+          </p>
+
+          <h2 class="subclaim">👨‍🏭 Servicios:</h2>
+          <ul class="service-description">
+            <li>
+              🚧 Adecuación de espacios de trabajo mediante la demarcación de
+              zonas, para el cumplimiento de normativas legales de seguridad.
+              <ul class="service-description__subdescription">
+                <li>
+                  <strong>✔️ Beneficio: </strong> Disminuir los accidentes
+                  laborales y promover la eficiencia en el uso de los espacios.
+                </li>
+              </ul>
+            </li>
+            <li>
+              🚧 Impermeabilización de suelos
+              <ul class="service-description__subdescription">
+                <li>
+                  <strong>✔️ Beneficio: </strong> Prolongar la vida útil de las
+                  zonas frías o húmedas.
+                </li>
+              </ul>
+            </li>
+            <li>
+              🚧 Limpieza de canales de aguas lluvia y reparación minuciosa de
+              tejados.
+              <ul class="service-description__subdescription">
+                <li>
+                  <strong>✔️ Beneficio: </strong>Reducir pérdidas de producto
+                  terminado o materias primas al resolver a tiempo la aparición
+                  de goteras.
+                </li>
+              </ul>
+            </li>
+          </ul>
+
+          <p class="subclaim">
+            <strong>✏️ Diseño:</strong> El diseño y desarrollo de proyectos de
+            ingeniería, mejoras estructurales en máquinas y procesos, diseño de
+            piezas para reparación de equipos y creación de planos 2D y 3D para
+            el cumplimiento de normativas y estándares internacionales. Nuestros
+            clientes han podido disminuir costos, implementando diseños
+            innovadores en sus procesos, optimizando y redistribuyendo sus
+            espacios de trabajo, oficinas o líneas de producción.
           </p>
           <p class="subclaim">
             <strong>Nos caracterizamos por: </strong> Lorem ipsum dolor sit amet
