add tags structure to organize correctly content on services description

--- a/index.html
+++ b/index.html
@@ -143,42 +143,72 @@
         </section>
         <section id="page-previous-about"></section>
         <section id="page-about">
-          <h1 class="claim">¿Quiénes somos?</h1>
+          <h1 class="title">¿Quienes somos?</h1>
           <p class="subclaim">
             somos un equipo de profesionales con amplio conocimiento en
             industrias de diversos sectores, lo cual nos permite apoyar tu
             empresa en:
           </p>
 
-          <h2 class="subclaim">👨‍🏭 Servicios:</h2>
+          <h2 class="subtitle">👨‍🏭 Servicios:</h2>
           <ul class="service-description">
             <li>
-              🚧 Adecuación de espacios de trabajo mediante la demarcación de
-              zonas, para el cumplimiento de normativas legales de seguridad.
-              <ul class="service-description__subdescription">
+              <div class="service-description__text">
+                <p>🚧</p>
+                <p>
+                  Adecuación de espacios de trabajo mediante la demarcación de
+                  zonas, para el cumplimiento de normativas legales de
+                  seguridad.
+                </p>
+              </div>
+              <ul class="service-description">
                 <li>
-                  <strong>✔️ Beneficio: </strong> Disminuir los accidentes
-                  laborales y promover la eficiencia en el uso de los espacios.
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong> Disminuir los accidentes
+                      laborales y promover la eficiencia en el uso de los
+                      espacios.
+                    </p>
+                  </div>
                 </li>
               </ul>
             </li>
             <li>
-              🚧 Impermeabilización de suelos
-              <ul class="service-description__subdescription">
+              <div class="service-description__text">
+                <p>🚧</p>
+                <p>Impermeabilización de suelos</p>
+              </div>
+              <ul class="service-description">
                 <li>
-                  <strong>✔️ Beneficio: </strong> Prolongar la vida útil de las
-                  zonas frías o húmedas.
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong> Prolongar la vida útil de las
+                      zonas frías o húmedas.
+                    </p>
+                  </div>
                 </li>
               </ul>
             </li>
             <li>
-              🚧 Limpieza de canales de aguas lluvia y reparación minuciosa de
-              tejados.
-              <ul class="service-description__subdescription">
+              <div class="service-description__text">
+                <p>🚧</p>
+                <p>
+                  Limpieza de canales de aguas lluvia y reparación minuciosa de
+                  tejados.
+                </p>
+              </div>
+              <ul class="service-description">
                 <li>
-                  <strong>✔️ Beneficio: </strong>Reducir pérdidas de producto
-                  terminado o materias primas al resolver a tiempo la aparición
-                  de goteras.
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Reducir pérdidas de producto
+                      terminado o materias primas al resolver a tiempo la
+                      aparición de goteras.
+                    </p>
+                  </div>
                 </li>
               </ul>
             </li>
