divide benefits in various sentences, add soldering service and create Design service with its first item ...pending feedback by client

--- a/index.html
+++ b/index.html
@@ -166,9 +166,46 @@
                   <div class="service-description__text service-subdescription">
                     <p>✔️</p>
                     <p>
-                      <strong>Beneficio: </strong> Disminuir los accidentes
-                      laborales y promover la eficiencia en el uso de los
-                      espacios.
+                      <strong>Beneficio: </strong>Disminuir los accidentes
+                      laborales
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Promover la eficiencia en el
+                      uso de los espacios
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <div class="service-description__text">
+                <p>🚧</p>
+                <p>
+                  Reparar o fabricar estructuras metálicas mediante trabajos de
+                  soldadura.
+                </p>
+              </div>
+              <ul class="service-description">
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong> Disminuir el deterioro de
+                      áreas de trabajo
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong> Aumentar la seguridad
+                      mediante estructuras metálicas robustas y confiables
                     </p>
                   </div>
                 </li>
@@ -185,7 +222,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong> Prolongar la vida útil de las
-                      zonas frías o húmedas.
+                      zonas frías o húmedas
                     </p>
                   </div>
                 </li>
@@ -206,7 +243,7 @@
                     <p>
                       <strong>Beneficio: </strong>Reducir pérdidas de producto
                       terminado o materias primas al resolver a tiempo la
-                      aparición de goteras.
+                      aparición de goteras
                     </p>
                   </div>
                 </li>
@@ -214,15 +251,49 @@
             </li>
           </ul>
 
-          <p class="subclaim">
-            <strong>✏️ Diseño:</strong> El diseño y desarrollo de proyectos de
-            ingeniería, mejoras estructurales en máquinas y procesos, diseño de
-            piezas para reparación de equipos y creación de planos 2D y 3D para
-            el cumplimiento de normativas y estándares internacionales. Nuestros
-            clientes han podido disminuir costos, implementando diseños
-            innovadores en sus procesos, optimizando y redistribuyendo sus
-            espacios de trabajo, oficinas o líneas de producción.
-          </p>
+          <h2 class="subtitle">✏️ Diseños:</h2>
+          <ul class="service-description">
+            <li>
+              <div class="service-description__text">
+                <p>💻</p>
+                <p>
+                  Creación de estructuras personalizadas y estandarizables, para
+                  el cumplimiento de objetivos logísticos y productivos de los
+                  proyectos.
+                </p>
+              </div>
+              <ul class="service-description">
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Optimizar el uso de los
+                      espacios de trabajo
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Cumplir normativas nacionales
+                      e internacionales de calidad, medio ambiente, seguridad y
+                      salud laboral
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Disminuir costos mediante la
+                      creación de accesorios o elementos de ingeniería avanzada
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
           <p class="subclaim">
             <strong>Nos caracterizamos por: </strong> Lorem ipsum dolor sit amet
             consectetur, adipisicing elit. Debitis facilis vel officia tempore,
