add two services in Design ...pending ortography review and client feedback

--- a/index.html
+++ b/index.html
@@ -293,6 +293,63 @@
                 </li>
               </ul>
             </li>
+            <li>
+              <div class="service-description__text">
+                <p>💻</p>
+                <p>
+                  Creación de piezas mecánicas existentes, defectuosas o nuevas
+                </p>
+              </div>
+              <ul class="service-description">
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Reducir costos de importación
+                      de piezas y repuestos, mediante planos que permiten la
+                      fabricación local
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Garantizar el stock de
+                      inventario en repuestos críticos
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Prolongar la vida útil de
+                      máquinas y equipos
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <div class="service-description__text">
+                <p>💻</p>
+                <p>Creación de planos para proyectos de ingeniería</p>
+              </div>
+              <ul class="service-description">
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Acompañamiento constante a
+                      ingenieros de proyectos para la identificación amplia y
+                      detallada de los factores que intervienen en la planeación
+                      de un proyecto
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </li>
           </ul>
           <p class="subclaim">
             <strong>Nos caracterizamos por: </strong> Lorem ipsum dolor sit amet
